creator_beta/tests/arch/mips/correct/syscalls/test_mips_syscall_005.s

#
# Creator (https://creatorsim.github.io/creator/)
#

.text
main:
    li $v0, 5
    syscall