creator_beta/tests/arch/mips/error/compiler/test_mips_error_compiler_005.s

#
# Creator (https://creatorsim.github.io/creator/)
#

 .data
    a:      .byte 0x123
    
.text
main:
   li $t0, 10